--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -133,6 +133,11 @@ main
       height: 302px
       background: variables.$bgCard
 
+      img
+        &:hover
+          transform: scale(1.3)
+          transition: 1s all ease
+
 footer
   margin-top: 70px
   height: 60px
